--- a/style.css
+++ b/style.css
@@ -75,8 +75,13 @@ color: rgb(224, 166, 197);
     margin-top: 8%;
     padding: 5%;
     padding-left: 3%;
-    padding-right: 3%;
-    
+    padding-right: 3%;  
 }
+.fiest-life{
+    text-align: center;
+}
+
+
+
 
 
